# k8s-dev

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  request.sh  service-nodeport.yaml
argo/: Dockerfile  accuracy-workflow-template.yaml  accuracy-workflow.yaml  argo-controller-configmap.yaml  argo-server-deploy.yaml  argo-server-ingress.yaml  bench-workflow.yaml  configmap.yaml  get_token.sh  hello-world.yaml  pvc.yaml  (+15 more)
bench/: Makefile  pv.yaml  pvc.yaml  pyproject.toml
bench/aiperf/: Dockerfile  options.txt  profile-job.yaml  profile_export_aiperf.json  run_aiperf.sh
bench/dataset/: convert_dataset.py
bench/etl/: etl_metrics.go  get_node_info.go  go.mod  go.sum  lighteval_etl.go  profile_export_genai_perf.json
bench/etl/accuracy-etl-app/: deploy.sh  go.mod  go.sum  main.go  samconfig.toml  template.yaml
bench/etl/benchmark-etl-app/: compile.sh  deploy.sh  go.mod  go.sum  samconfig.toml  template.yaml
bench/etl/benchmark-etl-app/accuracy/: compile.sh  dynamodb.go  main.go  repository.go  results_2025-10-24T08-49-35.599065.json  service.go  types.go
bench/genai_perf/: compare-job.yaml  job.yaml  profile-job.yaml  run_docker.sh
bench/genai_perf/profiles/: prompts.jsonl  run_perf.sh  test_request.sh
bench/hf_transformers/: Dockerfile  deployment.yaml  pvc.yaml  requirements.txt  service.yaml
bench/inspect-ai/: run_eval.sh  run_harbor.sh  task.py
bench/lighteval/: Dockerfile  config.yaml  eval-job.yaml  run_docker.sh  run_eval.sh
bench/sft_train/: train-job.yaml
bench/vllm/: Dockerfile  deployment.yaml  service.yaml  test_request.py
(+106 files in other folders)
