[project]
name = "k8s-dev"
version = "0.1.0"
description = "deplopment on kubernetes workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiperf>=0.7.0",
    "google-genai>=1.70.0",
    "huggingface>=0.0.1",
    "inspect-ai>=0.3.205",
    "inspect-evals[personality]>=0.3.106",
    "inspect-harbor>=0.4.15",
    "openai>=2.30.0",
]
